# W2P

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: diagram.json  topology.json
frontend/: app.js  index.html  styles.css
policies/: topology.rego
schemas/: README.md
tests/: test_agent_pipeline.py  test_auth.py  test_compile.py  test_downloads.py  test_extractor.py
w2p/: __init__.py  api.py  app_models.py  auth.py  cli.py  compiler.py  downloads.py  extractor.py  models.py  policy.py  storage.py  validation.py
w2p/ai/: __init__.py  chatbot.py  providers.py
w2p/emitters/: __init__.py  container.py  fastapi_backend.py  terraform.py
