[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "w2p"
version = "0.1.0"
description = "Whiteboard-to-Production compiler for secure application topology scaffolds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0"
]

[project.scripts]
w2p = "w2p.cli:main"

[tool.setuptools.packages.find]
include = ["w2p*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
